; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/top/extr_machine.c_compare_pid.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/top/extr_machine.c_compare_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kinfo_proc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_pid(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.kinfo_proc**, align 8
  %6 = alloca %struct.kinfo_proc**, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.kinfo_proc**
  store %struct.kinfo_proc** %8, %struct.kinfo_proc*** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.kinfo_proc**
  store %struct.kinfo_proc** %10, %struct.kinfo_proc*** %6, align 8
  %11 = load %struct.kinfo_proc**, %struct.kinfo_proc*** %6, align 8
  %12 = load %struct.kinfo_proc*, %struct.kinfo_proc** %11, align 8
  %13 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sge i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.kinfo_proc**, %struct.kinfo_proc*** %5, align 8
  %18 = load %struct.kinfo_proc*, %struct.kinfo_proc** %17, align 8
  %19 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sge i64 %20, 0
  br label %22

22:                                               ; preds = %16, %2
  %23 = phi i1 [ false, %2 ], [ %21, %16 ]
  %24 = zext i1 %23 to i32
  %25 = call i32 @assert(i32 %24)
  %26 = load %struct.kinfo_proc**, %struct.kinfo_proc*** %5, align 8
  %27 = load %struct.kinfo_proc*, %struct.kinfo_proc** %26, align 8
  %28 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load %struct.kinfo_proc**, %struct.kinfo_proc*** %6, align 8
  %31 = load %struct.kinfo_proc*, %struct.kinfo_proc** %30, align 8
  %32 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = sub nsw i64 %29, %33
  %35 = trunc i64 %34 to i32
  ret i32 %35
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
